tests/snapshots/snapshots/snapshots__snapshots__json_output__blocked_empty_json_output.snap
---
source: tests/snapshots/json_output.rs
assertion_line: 603
expression: SnapshotJson(&normalize_json(&json))
---
{
  "issues": [],
  "total": 0,
  "limit": 50,
  "offset": 0,
  "has_more": false
}
